# RubikCube

./: CMakeLists.txt  README.md  input.txt  main.cpp  output.txt
CubePiece/: CubePiece.cpp
Other/: HelpingFunctions.h  Menu.h
Rubik/: CubeRubik.h  CubeVisual.h  RubikConfig.h  VisualFunctions.h
Rubik/CubePiece/: CubePiece.cpp  CubePiece.h
Rubik/CubeRubik/: CubeRubik.cpp  CubeRubik.h
Rubik/CubeVisual/: CubeVisual.cpp  CubeVisual.h
